# ohtus22-palautukset

./: README.md  haara1.txt  haara2.txt
viikko1/nhl-statistics-1/src/: statistics.py
viikko1/nhl-statistics-1/src/tests/: test.py  top_test.py
viikko2/: tehtava-9.txt  tehtävä-9.txt
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/src/: project_reader.py
viikko2/verkkokauppa-1/src/: index.py  kauppa.py  pankki.py  varasto.py  viitegeneraattori.py
viikko3/login-robot/src/services/: user_service.py
viikko3/login-robot/src/tests/: login.robot  register.robot  resource.robot
viikko3/nhl-reader/src/: index.py  player.py  reader.py  stats.py
viikko3/web-login-robot/src/services/: user_service.py
viikko3/web-login-robot/src/tests/: login.robot  register.robot  resource.robot
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/tdd-ostoskori/src/: ostoskori.py
viikko4/tdd-ostoskori/src/tests/: ostoskori_test.py
viikko4/verkkokauppa/: .coverage
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/laskin/src/: kayttoliittyma.py
viikko5/tennis/src/: index.py  tennis_game.py
viikko6/query-language/src/: index.py  matchers.py
viikko7/: referaatti.md
